# customer_agent_tool

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
customer_support_analytics/: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py
customer_support_analytics/.streamlit/: config.toml
customer_support_analytics/configs/: logging.yaml  streamlit.toml
customer_support_analytics/data/processed/: agent_performance.csv  channel_metrics.csv  daily_metrics.csv  issue_type_metrics.csv  priority_metrics.csv
customer_support_analytics/docs/: files_overview.md
customer_support_analytics/src/: supportiq_web.py
customer_support_analytics/src/customer_support_analytics/: __init__.py
customer_support_analytics/src/customer_support_analytics/app/: __init__.py  main.py  streamlit_app.py
customer_support_analytics/src/customer_support_analytics/core/: __init__.py  logger.py  path.py
customer_support_analytics/src/customer_support_analytics/scripts/: __init__.py
customer_support_analytics/src/customer_support_analytics/scripts/analytics/: __init__.py  ab_test_analysis.py  cate_meta_learners.py  causal_inference.py  data_quality.py  experiment_tracker.py  regression_analysis.py  statistical_tests.py  time_series_forecasting.py
customer_support_analytics/src/customer_support_analytics/scripts/ml/: __init__.py
customer_support_analytics/src/customer_support_analytics/sql/: 02_standardize_issue_taxonomy.sql  03_ticket_metrics.sql  04_query_optimization.sql
customer_support_analytics/src/customer_support_analytics/steps/: download_kaggle_data.py  etl_pipeline.py  generate_sample_data.py  train_models.py
customer_support_analytics/tests/: __init__.py
supportiq-web/: app.py  (+4 more)
(+16 files in other folders)
